--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,151 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:text="@string/team_a"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
         android:layout_marginTop="5dp"
-        android:textSize="30sp"
-        />
-    <TextView
-        android:id="@+id/team_a_score"
-        android:text="@string/score_a"
-        android:layout_width="match_parent"
-        android:gravity="center_horizontal"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textSize="30sp"
-        android:textColor="#000000"
-        android:textStyle="bold"/>
-    <Button
-        android:text="@string/plus_3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:textAllCaps="true"
-        android:onClick="plus3"/>
-    <Button
-        android:text="@string/plus_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="5dp"
-        android:textAllCaps="true"
-        android:layout_marginRight="5dp"
-        android:onClick="plus2"/>
-    <Button
-        android:text="@string/free_throw"
-        android:layout_width="match_parent"
-        android:textAllCaps="true"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:onClick="Freethrow"/>
+         >
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
+             >
+            <TextView
+                android:text="@string/team_a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginTop="5dp"
+                android:textSize="30sp"
+                 />
+            <TextView
+                android:id="@+id/team_a_score"
+                android:text="@string/score_a"
+                android:fontFamily="sans-serif-light"
+                android:layout_width="match_parent"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="30sp"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                 />
+            <Button
+                android:text="@string/plus_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:textAllCaps="true"
+                android:onClick="plus3_a"
+                 />
+            <Button
+                android:text="@string/plus_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:textAllCaps="true"
+                android:layout_marginRight="5dp"
+                android:onClick="plus2_a"
+                 />
+            <Button
+                android:text="@string/free_throw"
+                android:layout_width="match_parent"
+                android:textAllCaps="true"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:onClick="Freethrow_a"
+                 />
+        </LinearLayout>
+      <View
+          android:layout_width="1dp"
+          android:layout_height="match_parent"
+          android:background="@android:color/darker_gray"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
+            android:orientation="vertical"
+             >
 
-</LinearLayout>
+            <TextView
+                android:text="@string/team_b"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="30sp"
+                 />
+            <TextView
+                android:id="@+id/team_b_score"
+                android:text="@string/score_b"
+                android:fontFamily="sans-serif-light"
+                android:layout_width="match_parent"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="30sp"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                 />
+            <Button
+                android:text="@string/plus_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:textAllCaps="true"
+                android:onClick="plus3_b"
+                 />
+            <Button
+                android:text="@string/plus_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:textAllCaps="true"
+                android:layout_marginRight="5dp"
+                android:onClick="plus2_b"
+                 />
+            <Button
+                android:text="@string/free_throw"
+                android:layout_width="match_parent"
+                android:textAllCaps="true"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:onClick="Freethrow_b"
+                 />
+
+        </LinearLayout>
+    </LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/reset"
+        android:textAllCaps="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_centerInParent="true"
+        android:onClick="reset"/>
+</RelativeLayout>
+
