--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="5dp"
          >
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginBottom="5dp"
              >
             <TextView
                 android:text="@string/team_a"
@@ -73,14 +74,17 @@
         </LinearLayout>
       <View
           android:layout_width="1dp"
+          android:layout_marginTop="16dp"
           android:layout_height="match_parent"
-          android:background="@android:color/darker_gray"/>
+          android:background="@android:color/darker_gray" />
+
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginTop="10dp"
             android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:orientation="vertical"
              >
 
